--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <title>Hire Newtonian's</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header class="header">
+            <div class="logo-wrapper">
+                <img class="logo"
+                    src="data:image/svg+xml,%3C?xml version='1.0' encoding='UTF-8'?%3E %3Csvg width='121px' height='121px' viewBox='0 0 121 121' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E %3C!-- Generator: Sketch 57.1 (83088) - https://sketch.com --%3E %3Ctitle%3EGroup%3C/title%3E %3Cdesc%3ECreated with Sketch.%3C/desc%3E %3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E %3Cg id='11' transform='translate(-85.000000, -444.000000)'%3E %3Cg id='Group' transform='translate(85.000000, 444.000000)'%3E %3Cpath d='M121,0 L121,60.5 C121,93.9132274 93.9132274,121 60.5,121 C27.0867726,121 0,93.9132274 0,60.5 C0,27.0867726 27.0867726,0 60.5,0 L60.5,0 L121,0 Z' id='Combined-Shape' fill='%236BA9E1'%3E%3C/path%3E %3Cpath d='M29.9991305,9.00050709 L29.9991305,112.999493 C12.0495586,102.530897 0,83.1625463 0,61 C0,38.8374537 12.0495586,19.4691028 29.9991305,9.00050709 Z' id='Combined-Shape' fill='%23719DE6'%3E%3C/path%3E %3Cpath d='M61,0 L61,121 C49.6896363,121 39.0947971,117.976087 30.0000026,112.702639 L30.0000026,8.2973615 C38.8225978,3.18174225 49.0567914,0.18302114 59.986416,0.00810527147 L61,0 Z' id='Combined-Shape' fill='%2352D2CE'%3E%3C/path%3E %3Cpath d='M60.4333989,0 L109.000019,97.0028949 C103.306307,104.571975 95.8797728,110.766798 87.3086261,114.999938 L33.0002978,6.5288324 C40.9599303,2.49511474 49.9294828,0.161945428 59.4295193,0.00812199514 L60.4333989,0 Z' id='Combined-Shape' fill='%2349E1C7'%3E%3C/path%3E %3Cpath d='M121,0 L121,60.4437296 C121,82.9590366 108.515898,102.599042 90.0012292,112.999886 L90,0 L121,0 Z' id='Combined-Shape' fill='%2356CAD1'%3E%3C/path%3E %3C/g%3E %3C/g%3E %3C/g%3E %3C/svg%3E"
+                    alt="">
+                <div class="logo-text"><span class="bold">Hire</span> <span class="thin">Newtonian's</span></div>
+            </div>
+            <div class="options-wrapper">
+                <div class="option header-active">
+                    <i class="bi bi-person"></i>
+                    <p>Hire Newtonian's</p>
+                </div>
+                <div class="option ">
+                    <i class="bi bi-chat-left-dots"></i>
+                    <p>Message</p>
+                </div>
+                <div class="option ">
+                    <i class="bi bi-building"></i>
+                    <p>Company Profile</p>
+                </div>
+                <div class="option">
+                    <i class="bi bi-journals"></i>
+                    <p>Overview</p>
+                </div>
+            </div>
+            <div class="utility-wrapper">
+                <div class="notification">
+                    <i class="bi bi-bell-fill"></i>
+                    <span class="dot"></span>
+                </div>
+                <div class="company-profile">
+                    <div class="profile-img">
+                        <img src="./images/zomato-logo.webp" alt="">
+                    </div>
+                    <div class="name-email">
+                        <p class="com-name">Zomato Limited</p>
+                        <p class="com-email">official@zomato.com</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
