--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title>Hire Newtonian's</title>
 </head>
+
 <body>
     <div class="container">
+        <!-- Header starts here -->
         <header class="header">
             <div class="logo-wrapper">
-                <img class="logo"
-                    src="data:image/svg+xml,%3C?xml version='1.0' encoding='UTF-8'?%3E %3Csvg width='121px' height='121px' viewBox='0 0 121 121' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E %3C!-- Generator: Sketch 57.1 (83088) - https://sketch.com --%3E %3Ctitle%3EGroup%3C/title%3E %3Cdesc%3ECreated with Sketch.%3C/desc%3E %3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E %3Cg id='11' transform='translate(-85.000000, -444.000000)'%3E %3Cg id='Group' transform='translate(85.000000, 444.000000)'%3E %3Cpath d='M121,0 L121,60.5 C121,93.9132274 93.9132274,121 60.5,121 C27.0867726,121 0,93.9132274 0,60.5 C0,27.0867726 27.0867726,0 60.5,0 L60.5,0 L121,0 Z' id='Combined-Shape' fill='%236BA9E1'%3E%3C/path%3E %3Cpath d='M29.9991305,9.00050709 L29.9991305,112.999493 C12.0495586,102.530897 0,83.1625463 0,61 C0,38.8374537 12.0495586,19.4691028 29.9991305,9.00050709 Z' id='Combined-Shape' fill='%23719DE6'%3E%3C/path%3E %3Cpath d='M61,0 L61,121 C49.6896363,121 39.0947971,117.976087 30.0000026,112.702639 L30.0000026,8.2973615 C38.8225978,3.18174225 49.0567914,0.18302114 59.986416,0.00810527147 L61,0 Z' id='Combined-Shape' fill='%2352D2CE'%3E%3C/path%3E %3Cpath d='M60.4333989,0 L109.000019,97.0028949 C103.306307,104.571975 95.8797728,110.766798 87.3086261,114.999938 L33.0002978,6.5288324 C40.9599303,2.49511474 49.9294828,0.161945428 59.4295193,0.00812199514 L60.4333989,0 Z' id='Combined-Shape' fill='%2349E1C7'%3E%3C/path%3E %3Cpath d='M121,0 L121,60.4437296 C121,82.9590366 108.515898,102.599042 90.0012292,112.999886 L90,0 L121,0 Z' id='Combined-Shape' fill='%2356CAD1'%3E%3C/path%3E %3C/g%3E %3C/g%3E %3C/g%3E %3C/svg%3E"
-                    alt="">
-                <div class="logo-text"><span class="bold">Hire</span> <span class="thin">Newtonian's</span></div>
+                <div class="logo-area">
+                    <img class="logo"
+                        src="data:image/svg+xml,%3C?xml version='1.0' encoding='UTF-8'?%3E %3Csvg width='121px' height='121px' viewBox='0 0 121 121' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E %3C!-- Generator: Sketch 57.1 (83088) - https://sketch.com --%3E %3Ctitle%3EGroup%3C/title%3E %3Cdesc%3ECreated with Sketch.%3C/desc%3E %3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E %3Cg id='11' transform='translate(-85.000000, -444.000000)'%3E %3Cg id='Group' transform='translate(85.000000, 444.000000)'%3E %3Cpath d='M121,0 L121,60.5 C121,93.9132274 93.9132274,121 60.5,121 C27.0867726,121 0,93.9132274 0,60.5 C0,27.0867726 27.0867726,0 60.5,0 L60.5,0 L121,0 Z' id='Combined-Shape' fill='%236BA9E1'%3E%3C/path%3E %3Cpath d='M29.9991305,9.00050709 L29.9991305,112.999493 C12.0495586,102.530897 0,83.1625463 0,61 C0,38.8374537 12.0495586,19.4691028 29.9991305,9.00050709 Z' id='Combined-Shape' fill='%23719DE6'%3E%3C/path%3E %3Cpath d='M61,0 L61,121 C49.6896363,121 39.0947971,117.976087 30.0000026,112.702639 L30.0000026,8.2973615 C38.8225978,3.18174225 49.0567914,0.18302114 59.986416,0.00810527147 L61,0 Z' id='Combined-Shape' fill='%2352D2CE'%3E%3C/path%3E %3Cpath d='M60.4333989,0 L109.000019,97.0028949 C103.306307,104.571975 95.8797728,110.766798 87.3086261,114.999938 L33.0002978,6.5288324 C40.9599303,2.49511474 49.9294828,0.161945428 59.4295193,0.00812199514 L60.4333989,0 Z' id='Combined-Shape' fill='%2349E1C7'%3E%3C/path%3E %3Cpath d='M121,0 L121,60.4437296 C121,82.9590366 108.515898,102.599042 90.0012292,112.999886 L90,0 L121,0 Z' id='Combined-Shape' fill='%2356CAD1'%3E%3C/path%3E %3C/g%3E %3C/g%3E %3C/g%3E %3C/svg%3E"
+                        alt="">
+                    <div class="logo-text"><span class="bold">Hire</span> <span class="thin">Newtonian's</span></div>
+                </div>
             </div>
             <div class="options-wrapper">
                 <div class="option header-active">
@@ -46,11 +51,103 @@
                     </div>
                     <div class="name-email">
                         <p class="com-name">Zomato Limited</p>
-                        <p class="com-email">official@zomato.com</p>
+                        <p class="com-email">hire@zomato.com</p>
                     </div>
                 </div>
             </div>
         </header>
+
+        <!-- Body starts here -->
+        <div class="body-wrapper">
+            <div class="body-content">
+                <!-- Left -->
+                <section class="left-panel">
+                    <div class="com-profile-conainer">
+                        <p>Company Profile</p>
+                    </div>
+                </section>
+
+                <!-- Middle -->
+                <section class="middle-panel">
+                    <div class="search-container">
+                        <div class="search-text-wrapper">
+                            <p class="search-text">Search Candidate</p>
+                            <p class="save-search">
+                                <i class="bi bi-bookmark-dash-fill"></i>
+                                Save Search
+                            </p>
+                        </div>
+                        <div class="search-bar-wrapper">
+                            <div class="search-bar">
+                                <i class="bi bi-search"></i>
+                                <input type="text" placeholder="Search for Tech Stack, Location, Experience...">
+                            </div>
+                            <button type="button">Search</button>
+                        </div>
+                        <div class="search-result">
+                            <p>0 candidates found</p>
+                        </div>
+                    </div>
+
+                    <!-- API Fetching for candidate load -->
+                    <div class="candidate-wrapper">
+                        <div class="candiate">
+                            <div class="profile-title-wrapper">
+                                <div class="cand-profile-img">
+                                    <img src="./images/candidate-profile.jpg" alt="">
+                                </div>
+                                <div class="cand-name-wrapper">
+                                    <p class="cand-name">Jamim Mehdi Hussain Khan</p>
+                                    <p class="cand-grad">BCA - 2021</p>
+                                </div>
+                                <div class="button-wrapper">
+                                    <button type="button">
+                                        <i class="bi bi-bookmark-dash-fill"></i>
+                                        <span>Save candidate</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="cand-desc">
+                                <p>Final year BCA student at The Oxford College of Science, Bangalore with excellent problem solving skills and ability to perform in a team. Ambitious to kick start the career with a globally recognized organization which will give me exposure to enhance my skills and knowledge for mutual benefits of the organization.
+                                </p>
+                            </div>
+                            <div class="stack-tags">
+                                <div class="tags"><p>Fullstack</p></div>
+                                <div class="tags"><p>Frontend</p></div>
+                                <div class="tags"><p>Backend</p></div>
+                                <div class="tags"><p>React</p></div>
+                                <div class="tags"><p>Node JS</p></div>
+                                <div class="tags"><p>Mongo DB</p></div>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="stats-wrapper">
+                                <div class="ref-score">
+                                    <i class="bi bi-bar-chart-line"></i>
+                                    <span class="score-obtained">820</span>
+                                    <span class="total-score">/1000</span>
+                                </div>
+                                <div class="shortlisted-wapper">
+                                    <i class="bi bi-building"></i>
+                                    <span class="sort-com">4</span>
+                                    <span class="sort-text">Company sortlisted</span>
+                                </div>
+                                <div class="sortlist-btn">
+                                    <button type="button">Sortlist Candidate</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        
+                    </div>
+                </section>
+
+                <!-- Right -->
+                <section class="right-panel">
+                </section>
+            </div>
+        </div>
     </div>
+    <script src="./script.js"></script>
 </body>
+
 </html>
