fix: name capitalize

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                     <!-- API Fetching for candidate load -->
                     <div class="candidate-wrapper">
-                        <div class="candiate">
+                        <!-- <div class="candiate">
                             <div class="profile-title-wrapper">
                                 <div class="cand-profile-img">
                                     <img src="./images/candidate-profile.jpg" alt="">
@@ -135,7 +135,7 @@
                                     <button type="button">Sortlist Candidate</button>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         
                     </div>
