feature: search functionality added

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
                         <div class="search-bar-wrapper">
                             <div class="search-bar">
                                 <i class="bi bi-search"></i>
-                                <input type="text" placeholder="Search for Tech Stack, Location, Experience...">
+                                <input id="search-input" type="text" placeholder="Search for Tech Stack, Location, Experience...">
                             </div>
-                            <button type="button">Search</button>
+                            <button type="button" id="search-btn">Search</button>
                         </div>
                         <div class="search-result">
-                            <p>0 candidates found</p>
+                            <p id="candidate-found">0 candidates found</p>
                         </div>
                     </div>
 
@@ -135,9 +135,7 @@
                                     <button type="button">Sortlist Candidate</button>
                                 </div>
                             </div>
-                        </div> -->
-
-                        
+                        </div> -->  
                     </div>
                 </section>
 
