fix: font color

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                             </p>
                         </div>
                         <div class="search-bar-wrapper">
-                            <div class="search-bar">
+                            <div id="search-bar" class="search-bar">
                                 <i class="bi bi-search"></i>
-                                <input id="search-input" type="text" placeholder="Search for Tech Stack, Location, Experience...">
+                                <input id="search-input" type="text" placeholder="Search for skills like dsa, frontend, node js, mongo db...">
                             </div>
                             <button type="button" id="search-btn">Search</button>
                         </div>
