fix: css; feature: added right panel filter

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                     <div class="com-profile-conainer">
                         <p>Company Profile</p>
                     </div>
+                    <div class="com-profile-conainer">
+                        <p>Company Profile</p>
+                    </div>
                 </section>
 
                 <!-- Middle -->
@@ -80,7 +83,8 @@
                         <div class="search-bar-wrapper">
                             <div id="search-bar" class="search-bar">
                                 <i class="bi bi-search"></i>
-                                <input id="search-input" type="text" placeholder="Search for skills like dsa, frontend, node js, mongo db...">
+                                <input id="search-input" type="text"
+                                    placeholder="Search for skills like dsa, frontend, node js, mongo db...">
                             </div>
                             <button type="button" id="search-btn">Search</button>
                         </div>
@@ -135,12 +139,48 @@
                                     <button type="button">Sortlist Candidate</button>
                                 </div>
                             </div>
-                        </div> -->  
+                        </div> -->
                     </div>
                 </section>
 
                 <!-- Right -->
                 <section class="right-panel">
+                    <div class="right-wrapper">
+                        <div class="cand-filter-wrapper">
+                            <p class="filter-title">Candidate Filter</p>
+                            <p id="clear-all" class="clear">Clear All</p>
+                        </div>
+                    </div>
+                    <div class="right-wrapper">
+                        <div class="exp-title-clear">
+                            <p class="exp-text">Experience Level</p>
+                            <p id="clear-exp" class="clear">Clear</p>
+                        </div>
+                        <div class="exp-options">
+                            <div class="option">
+                                <div class="checkbox-wrapper">
+                                    <input id="entry-level" class="check-box" type="checkbox">
+                                    <label for="entry-level">Entry Level</label>
+                                </div>
+                                <p class="cand-count">20 candidates</p>
+                            </div>
+                            <div class="option">
+                                <div class="checkbox-wrapper">
+                                    <input id="intermediate-level" class="check-box" type="checkbox">
+                                    <label for="intermediate-level">Intermediate Level</label>
+                                </div>
+                                <p class="cand-count">15 candidates</p>
+                            </div>
+                            <div class="option">
+                                <div class="checkbox-wrapper">
+                                    <input id="experienced" class="check-box" type="checkbox">
+                                    <label for="experienced">Experienced</label>
+                                </div>
+                                <p class="cand-count">20 candidates</p>
+                            </div>
+
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
