feature: shortlisted candidate delete button

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                             <p class="text">Shortlisted Candidate</p>
                             <p id="clear-exp" class="clear">Clear</p>
                         </div>
+                        <div id="empty-text" class="empty-text ">
+                            <p>No candidate shortlisted!</p>
+                        </div>
                         <!-- <div class="shortlisted-candidate">
                             <div class="short-cand-img">
                                 <div class="img-wrapper">
