feature: open positions

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div id="shortlisted-candidate" class="side-wrapper sorted-cand">
                         <div class="title-clear">
                             <p class="text">Shortlisted Candidate</p>
-                            <p id="clear-exp" class="clear">Clear</p>
+                            <!-- <p id="clear-exp" class="clear">Clear</p> -->
                         </div>
                         <div id="empty-text" class="empty-text ">
                             <p>No candidate shortlisted!</p>
@@ -98,7 +98,21 @@
                             </div>
                         </div> -->
                     </div>
-
+                    <div class="side-wrapper">
+                        <div class="title-clear">
+                            <p class="text">Open Positions</p>
+                            <div class="profile-btn-wrapper">
+                                <button type="button"><i class="bi bi-pencil-square"></i></button>
+                            </div>
+                        </div>
+                        <ul class="list-wrapper">
+                            <li class="list">Software Development Engineer - I</li>
+                            <li class="list">Software Engineer - Frontend</li>
+                            <li class="list">QA - Testing</li>
+                            <li class="list">Software Development Engineer - II</li>
+                        </ul>
+                        
+                    </div>
 
                 </section>
 
